<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/weatherTable"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:stretchColumns="*"
    tools:context=".WeatherActivity" >

    <TableRow
        android:id="@+id/gatineau_weather_row"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/gatineau_weather_title"
            android:layout_width="match_parent"
            android:layout_height="15dp"
            android:text="@string/gatineau_weather" />

        <LinearLayout
            android:id="@+id/gatineau_weather"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/gw_icon"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:contentDescription="@string/weather_image"
                android:gravity="center" />

            <TextView
                android:id="@+id/gw_temp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/temp_stub" />

            <TextView
                android:id="@+id/gw_wind"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/wind_stub" />

            <TextView
                android:id="@+id/gw_sun"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/sun_stub" />
        </LinearLayout>
    </TableRow>

    <TableRow
        android:id="@+id/chelsea_weather_row"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/chelsea_weather_title"
            android:layout_width="match_parent"
            android:layout_height="15dp"
            android:text="@string/chelsea_weather" />

        <LinearLayout
            android:id="@+id/chelsea_weather"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/oc_icon"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:contentDescription="@string/weather_image"
                android:gravity="center" />

            <TextView
                android:id="@+id/oc_temp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/temp_stub" />

            <TextView
                android:id="@+id/oc_wind"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/wind_stub" />

            <TextView
                android:id="@+id/oc_sun"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/sun_stub" />
        </LinearLayout>
    </TableRow>

    <TableRow
        android:id="@+id/wakefield_weather_row"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/wakefield_weather_title"
            android:layout_width="match_parent"
            android:layout_height="15dp"
            android:text="@string/wakefield_weather" />

        <LinearLayout
            android:id="@+id/wakefield_weather"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/wf_icon"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:contentDescription="@string/weather_image"
                android:gravity="center" />

            <TextView
                android:id="@+id/wf_temp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/temp_stub" />

            <TextView
                android:id="@+id/wf_wind"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/wind_stub" />

            <TextView
                android:id="@+id/wf_sun"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/sun_stub" />
        </LinearLayout>
    </TableRow>

</TableLayout>